Added new technical skill

--- a/vaishak_cv.tex
+++ b/vaishak_cv.tex
@@ -21,12 +21,14 @@
 	{\textsc {\Huge Vaishak Salin}} \\\\\\
 	\begin{tabular}{rp{13cm}}
 		OBJECTIVE 
-		& To start a career as a software engineer in an organization where I can apply my knowledge and skills as well as further my learning. \\\\
+		& To start a career as a software engineer in an organization where I can 
+		apply my knowledge and skills as well as further my learning. \\\\
 		\hline
 		\\
 		EDUCATION
 		& {\bf Manipal Institute of Technology} \\
-		& 6\textsuperscript{th} Semester Computer Science and Engineering. CGPA 7.87/10. \\\\
+		& 6\textsuperscript{th} Semester Computer Science and Engineering. 
+		CGPA 7.87/10. \\\\
 		& {\bf Little Rock Indian School} \\
 		& 12\textsuperscript{th} Standard C.B.S.E. 94.6\% \\\\
 		& 10\textsuperscript{th} Standard C.B.S.E. 93.4\% \\\\
@@ -34,20 +36,29 @@
 		\\
 		TECHNICAL SKILLS
 		& {\bf Programing Languages} \\
-		& Python(advanced), C++(advanced), C\#(intermediate), Java(intermediate), Javascript(beginner),
-		Octave(beginner), MATLAB(beginner), PHP(beginner) \\\\
+		& Python(advanced), C++(advanced), C\#(intermediate), 
+		Java(intermediate), OpenCL(intermediate), Octave(beginner),
+		MATLAB(beginner), PHP(beginner) \\\\
 		& {\bf Technical Software} \\
-		& Git VCS(intermediate), Visual Studio 2012(intermediate), Scikit-Learn(intermediate), Matlab(beginner), 
-		Android-Developer-Toolkit(beginner), Microsoft Webmatrix 3(beginner) \\\\
+		& Git VCS(intermediate), Visual Studio 2012(intermediate), 
+		Scikit-Learn(intermediate), Matlab(beginner), 
+		Android-Developer-Toolkit(beginner), 
+		Microsoft Webmatrix 3(beginner) \\\\
 		\hline
 		\\
 		PROJECTS
 		& \vspace{-5mm} \begin{itemize} 
-			\item Peptide Status Detection :- A classifier written in python to attempt to classify n length peptides as amyloidogenic or non-amyloidogenic. 
-			\item BunkMate :- A friendly Windows Phone app to keep track of students attendance in college.
+			\item Peptide Status Detection :- A classifier written in python to 
+			attempt to classify n length peptides as amyloidogenic or non-
+			amyloidogenic. 
+			\item BunkMate :- A friendly Windows Phone app to keep track of 
+			students attendance in college.
+			\item Craigsist Category Classifier: A model that predicts the 
+			category under which a Craigslist post must be listed using Support 
+			Vector Machines
 		\end{itemize} \\\\
 		\hline
-		\\
+		\\	
 		ADDITIONAL ACTIVITES
 		& \vspace{-5mm} \begin{itemize}
 			\item Summer School at IISc Bangalore
@@ -59,7 +70,7 @@
 		\hline
 		\\
 		REFERENCES
-		& {\bf Prof. Nakul Shetty} \\
-		& Assistant Professor, E\&C dept, Manipal Institute of Technology \\
+		& {\bf Dr. Smitha Sunil Kumar Nair} \\
+		& Assistant Professor, CSE dept, Manipal Institute of Technology \\
 	\end{tabular}
 \end{document}
